Fixing logo in FF on mobile

--- a/themes/fu2013/less/fu2012.typography.less
+++ b/themes/fu2013/less/fu2012.typography.less
@@ -88,7 +88,7 @@ input, textarea {
   h1 {
     margin-left: -8px;
     img {
-      width: auto;
+      width: 100%;
     }
   }
   h2 {
